--- a/logup.html
+++ b/logup.html
@@ -6,7 +6,8 @@
     <title>Logup</title>
 
     <style>
-        /* Agrega aquí tus estilos CSS personalizados */
+         
+        
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -14,8 +15,14 @@
             padding: 0;
             text-align: center;
         }
+        .mar {
+            max-width: 400px;
+            margin: 0 auto;
+            text-align: center;
+        }
         .container {
             max-width: 400px;
+            max-height: auto;
             margin: 0 auto;
             padding: 20px;
             background-color: #fff;
@@ -68,6 +75,9 @@
 
 </head>
 <body>
+    <div class="mar">
+        <h1>El Ropero de Lily</h1>
+    </div>
     <div class="container">
         <h2>Registro</h2>
         <form action="#" method="post">
