--- a/login.html
+++ b/login.html
@@ -1,18 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
 
-    <link rel="stylesheet" href="./style.css">
-    
+    <style>
+        .mar {
+            max-width: 400px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .container-login {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+
+        }
+
+        h2 {
+            margin-top: 0;
+        }
+
+        form {
+            text-align: left;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .forgot-password {
+            text-align: right;
+        }
+
+        .btn {
+            display: inline-block;
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .btn-register {
+            margin-top: 10px;
+            text-align: center;
+        }
+    </style>
+
 
 
 </head>
+
 <body>
+    <div class="mar">
+        <h1>El Ropero de Lily</h1>
+    </div>
     <div class="container-login">
+
         <h2>Iniciar Sesión</h2>
         <form action="#" method="post">
             <div class="form-group">
@@ -36,4 +102,5 @@
         <a href="index.html">Volver a la página de inicio</a>
     </div>
 </body>
+
 </html>
