--- a/prueba.html
+++ b/prueba.html
@@ -54,7 +54,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <header>
         <h1>Tienda de Ropa Usada</h1>
-        <h1>El Perchero de Lili</h1>
+        <h1>El Ropero de Lily</h1>
     </header>
 
     <section id="informacion-sitio">
