--- a/login.html
+++ b/login.html
@@ -5,9 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
 
 
     <style>
+
+header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+        }
+        
         .mar {
             max-width: 400px;
             margin: 0 auto;
@@ -74,9 +84,10 @@
 </head>
 
 <body>
-    <div class="mar">
-        <h1>El Ropero de Lily</h1>
-    </div>
+    <header>
+        <h1>Tienda de Ropa Usada Online</h1>
+        <h2>El Ropero de Lily </h2>
+    </header>
     <div class="container-login">
 
         <h2>Iniciar Sesión</h2>
@@ -101,6 +112,10 @@
     <div class="btn-register">
         <a href="index.html">Volver a la página de inicio</a>
     </div>
+
+    <footer class="bg-secondary text-white text-center py-3">
+        <p class="mb-0">&copy; 2023 Tienda de Ropa Usada El Ropero de Lily</p>
+    </footer>
 </body>
 
 </html>
