se agrga pestaña para cambiar tipo de usuario en admin

--- a/admin.html
+++ b/admin.html
@@ -72,6 +72,7 @@
                             <li><a class="dropdown-item" href="#">Inventario</a></li>
                             <li><a class="dropdown-item" href="#">Historial de compras</a></li>
                             <li><a class="dropdown-item" href="#">Registro de ventas</a></li>
+                            <li><a class="dropdown-item" href="#">Permisos de Usuarios</a></li>
                             
                         </ul>
                     </li>
