--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+
 <style>
     
     body {
@@ -28,8 +30,9 @@
 <body>
     <header class="d-flex justify-content-between align-items-center #333 py-3 px-4">
         <h1 class="text-light">Bienvenido, Carlos Tello</h1>
-        <a href="#" class="btn btn-light">
-            <i class="bi bi-cart"></i> Carrito </a>
+        <a class="nav-link" href="#">
+            <i class="fas fa-shopping-cart fa-lg"></i> 
+        </a>
         <div class="dropdown">
             <a class="btn btn-light dropdown-toggle" href="#" role="button" id="userDropdown" data-bs-toggle="dropdown"
                 aria-expanded="false">
